--- a/hwk/hwk2/hwk2.Rmd
+++ b/hwk/hwk2/hwk2.Rmd
@@ -20,6 +20,8 @@ library(quantreg)
 library(galts)
 library(knitr)
 
+set.seed(12345)
+
 ```
 
 ```{r, eval = TRUE, echo = FALSE}
@@ -53,7 +55,7 @@ b1_sim <- tibble(ls1 = rep(0, 100),
 b0 <- 1
 b1 <- 2
 
-for(i in 1:length(b0_sim)){
+for(i in 1:100){
   
   raw <- tibble(x = rnorm(100, 0, 1), 
                 e1 = rnorm(100, 0, 2),
@@ -61,7 +63,7 @@ for(i in 1:length(b0_sim)){
                 e3 = rcauchy(100, 0 ,2),
                 y1 = b0 + b1 * x + e1,
                 y2 = b0 + b1 * x + e2,
-                y3 = b0 + b1 * x + e2)
+                y3 = b0 + b1 * x + e3)
   
   
   
