--- a/hwk/hwk2/hwk2.Rmd
+++ b/hwk/hwk2/hwk2.Rmd
@@ -5,10 +5,11 @@ date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: html_document
 ---
 
-THERE IS PROBLEM WITH MY OLS ESTIMATES, ALL OTHER METHODS COMPARABLE TO CHRIS
+DISCLAIMER: Cauchy draws are extremely variable, I had draws resulting in MSE less than 900 for both coefficients, but another draw that had MSE over 20000 for each coefficient.
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, cache = FALSE)
+options(stringsAsFactors = FALSE, scipen = 1E10)
 ```
 
 ```{r, include = FALSE}
@@ -20,7 +21,7 @@ library(quantreg)
 library(galts)
 library(knitr)
 
-set.seed(12345)
+# set.seed(1198724)
 
 ```
 
@@ -59,7 +60,7 @@ for(i in 1:100){
   raw <- tibble(x = rnorm(100, 0, 1), 
                 e1 = rnorm(100, 0, 2),
                 e2 = rlnorm(100, 0, 2),
-                e3 = rcauchy(100, 0 ,2),
+                e3 = stats::rcauchy(100, 0 ,2),
                 y1 = b0 + b1 * x + e1,
                 y2 = b0 + b1 * x + e2,
                 y3 = b0 + b1 * x + e3)
@@ -141,7 +142,13 @@ b1_mse <- b1_bias_sq + b1_var
 ```
 
 ```{r, eval = TRUE, echo = TRUE}
+# knitr::kable(b0_mse, row.names = c('lse normal', 'lse lognormal', 'lse cauchy', 'rlm normal', 'rlm lognormal', 'rlm cauch', 'lad normal', 'lad lognormal', 'lad cauchy', 'lts normal', 'lts lognormal', 'lts cauchy'))
+
+# knitr::kable(b1_mse, row.names = c('lse normal', 'lse lognormal', 'lse cauchy', 'rlm normal', 'rlm lognormal', 'rlm cauch', 'lad normal', 'lad lognormal', 'lad cauchy', 'lts normal', 'lts lognormal', 'lts cauchy'))
+
+
 knitr::kable(b0_mse)
 
 knitr::kable(b1_mse)
+
 ```
